# polymarket-bot

./: .env.example  .gitignore  Dockerfile  README.md  deploy_to_ec2.sh  docker-compose.yml  pyproject.toml  requirements.txt
config/: settings.py
deploy/: setup_ec2.sh
examples/: market_making_demo.py  place_limit_order.py
notebooks/: explore_data.ipynb
notebooks/layer0_ingestion/: check_allowances.ipynb  debug_uma_signal.ipynb  explore_market.ipynb  test_connection.ipynb  view_markets.ipynb
notebooks/layer1_research/: 01_build_catalog.ipynb  02_explore_data.ipynb  03_run_backtest_fair_value_mr.ipynb  04_run_backtest_hold_cash.ipynb  05_run_backtest_random_trader.ipynb  99_analyze_trades.ipynb
notebooks/layer4_execution/: preflight.ipynb
scripts/: analyze_trades.py  check_allowances.py  debug_uma_signal.py  explore_market.py  load_data.py  preflight.py  run_backtest.py  run_uma_arb_bot.py  test_connection.py  test_uma.py  view_markets.py
src/: __init__.py  markets.py  notifications.py  orderbook.py  utils.py  websocket_feed.py
src/layer0_ingestion/: polymarket_clob.py  polymarket_gamma.py  uma_client.py
src/layer2_signals/: cross_market.py  crypto_price_signal.py  fair_value.py  kalshi_signal.py  market_selector.py  uma_arb_signal.py
src/layer3_portfolio/: mm_risk_manager.py  risk_manager.py
src/layer4_execution/: execution_agent.py  quote_manager.py  trading.py
tests/: fixtures.py  test_crypto_signal.py  test_fair_value.py  test_integration_pipeline.py  test_kalshi_signal.py  test_logit_math.py  test_quote_manager.py  test_risk_manager.py
(+46 files in other folders)
