[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-bot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0",
    "py-clob-client>=0.18.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "web3>=6.11.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
backtesting = [
    "nautilus_trader>=1.207.0,<1.230.0",
    "duckdb>=1.0.0",
    "matplotlib>=3.8.0",
    "tqdm>=4.66.0",
    "mlflow>=2.15.0",
]

[tool.setuptools.packages.find]
include = ["src*"]

[dependency-groups]
dev = [
    "jupytext>=1.19.1",
]
